Jan 10, 2015 - v0.8.0  Reduced number of steps required for writing
    images.  Deprecated old read and write methods in favor of
    array-style slicing.  Added ignore_pclr_cmap_cdef, verbose,
    shape, codestream, layer properties.

Oct 06, 2014 - v0.7.2  Added ellipsis support in array-style slicing.

Oct 02, 2014 - v0.7.1  Fixed README to mention Python 3.4

Oct 01, 2014 - v0.7.0  Added array-style slicing.

August 03, 2014 - v0.6.0  Added Cinema2K, Cinema4K write support.
    Changed constructor for ChannelDefinition box.  Removed support
    for Python 2.6.  Added write support for JP2 UUID, DataEntryURL,
    Palette and Component Mapping boxes, JPX Association, NumberList
    and DataReference boxes.  Added read support for JPX free,
    number list, data reference, fragment table, and fragment list
    boxes.  Improved JPX Reader Requirements box support.  Added
    get_printoptions, set_printoptions functions.  Palette box now
    a 2D numpy array instead of a list of 1D arrays.  JP2 super box
    constructors now take optional box list  argument.  Fixed bug
    where JPX files with more than one codestream but advertising
    jp2 compatibility were not being read.

Jan 28, 2014 - v0.5.10  Fixed bad warning when reader requirements box mask
    length is unsupported.

Oct 29, 2013 - v0.5.9  Fixed bad library load on linux as a result of 0.5.8

Oct 29, 2013 - v0.5.8  Fixed unnecessary warnings when default locations for
    openjpeg libraries on mac do not specify the actual library.

Oct 28, 2013 - v0.5.7  Fixed bad import error message when libopenjpeg library
    not installed on mac.

Oct 13, 2013 - v0.5.6  Fixed handling of non-ascii chars in XML boxes.  Fixed
    some docstring errors in jp2box module.

Oct 03, 2013 - v0.5.5  Fixed pip install error introduced in 0.5.0.  

Sep 24, 2013 - v0.5.4  Fixed test error restricted to v2.0.

Sep 24, 2013 - v0.5.3  Removed a duplicated channel definition test in