@@ -1,3 +1,5 @@
+Mar 18, 2015 - Added support for JP2 bits per component box.
+
 Jan 10, 2015 - v0.8.0  Reduced number of steps required for writing
     images.  Deprecated old read and write methods in favor of
     array-style slicing.  Added ignore_pclr_cmap_cdef, verbose,
